# kvm-dmesg

./: .gitignore  Makefile  client.c  client.h  cmd.c  cmd.h  defs.h  libvirt_client.c  main.c  mem.c  mem.h  meson.build  printk.c  symbols.c  version.c  x86_64.c
.github/workflows/: ci.yml
tests/: base.py
